Update AUTHORS file with correct Docker format

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
-# For how it is generated, see `scripts/generate-authors.sh`.
+# For more info: https://github.com/moby/moby/blob/master/AUTHORS
 
 Darlene Ayinkamiye <d.ayinkamiye@alustudent.com>
 Teniola Olaleye <t.olaleye@alustudent.com>
